--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,35 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: rgb(36,30,0);
+  background: linear-gradient(0deg, rgba(36,30,0,1) 0%, rgba(121,105,9,1) 33%, rgba(245,255,0,1) 100%);
+  width: 100%;
+  height: 100vh;
+}
+
+form{
+  box-shadow: 0px 0px 12px #000000;
+  border-radius: 8px;
+  padding: 1rem;
+  background: rgb(36,22,0);
+background: linear-gradient(0deg, rgba(36,22,0,1) 0%, rgba(121,82,9,1) 33%, rgba(255,201,0,1) 100%);
+}
+
+.btn {
+  display: block;
+  width: 100%;
+  font-size: 1.2rem;
+  margin: 8px 0;
+  padding: 10px 0;
+  background-color: #333;
+  color: #fff;
+  border: 1px solid #333;
+  border-radius: 8px;
+  cursor: pointer;
+}
